--- a/products.html
+++ b/products.html
@@ -15,6 +15,11 @@
                 <li><a href="about.html">Sobre Nosotros</a></li>
                 <li><a href="address.html">Dirección</a></li>
                 <li><a href="products.html">Nuestros Productos</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="login.html">Iniciar Sesión</a></li>
+                <li><a href="about.html">Sobre Nosotros</a></li>
+                <li><a href="address.html">Dirección</a></li>
+                <li><a href="products.html">Nuestros Productos</a></li>
             </ul>
         </nav>
     </header>
