subrayados de textos

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             </a>
             <div class="navbar__menu">
                 <ul class="navbar__menu_list">
+                    <img class="instagram" src="instagram.png" alt="logo instagram">
                     <li class="navbar__menu__list__item">
                         <a class="navbar__menu__list__item__link"
                             href="https://www.instagram.com/alann.jsn/">Instagram</a>
