--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             </a>
             <div class="navbar__menu">
                 <ul class="navbar__menu_list">
-                    <img class="instagram" src="instagram.png" alt="logo instagram">
-                    <li class="navbar__menu__list__item">
-                        <a class="navbar__menu__list__item__link"
-                            href="https://www.instagram.com/alann.jsn/">Instagram</a>
-                    </li>
+                    <a href="https://www.instagram.com/alann.jsn/" class="navbar__menu__list__item__link">
+                        <img class="instagram" src="instagram.png" alt="logo instagram">
+                        <li class="navbar__menu__list__item">
+                            instagram
+                        </li>
+                    </a>
                 </ul>
             </div>
             <div class="navbar__menu">
