rediseño web octa

--- a/index.html
+++ b/index.html
@@ -11,52 +11,47 @@
 <body>
     <header>
         <nav class="navbar">
+            <div class="navbar__menu">
+
+
+                </ul>
+            </div>
             <a class="navbar__logo" href="index.html">
                 <img class="logo" src="logo1.png" alt="logo de la compañia">
             </a>
-            <div class="navbar__menu">
-                <ul class="navbar__menu_list">
-                    <a href="https://www.instagram.com/alann.jsn/" class="navbar__menu__list__item__link">
+            <div class="navbar__instagram">
+                <ul>
+                    <a href="https://www.instagram.com/alann.jsn/" class="navbar__instagram">
                         <img class="instagram" src="instagram.png" alt="logo instagram">
-                        <li class="navbar__menu__list__item">
-                            instagram
-                        </li>
+                        <li class="navbar__menu__list__item"></li>
                     </a>
                 </ul>
             </div>
-            <div class="navbar__menu">
-                <ul class="navbar__menu__list">
-                    <li class="navbar__menu__list__item">
-                        <a class="navbar__menu__list__item__link" href="index.html">inicio</a>
-                    </li>
-                    <li class="navbar__menu__list__item">
-                        <a class="navbar__menu__list__item__link" href="products.html">Nuestros
-                            Productos</a>
-                    </li>
-                </ul>
-
-
-                </ul>
-            </div>
         </nav>
-        <!-- <nav>
-            <a href="index.html">
-                <img class="logo" src="logo.png" alt="logo de la compañia">
-            </a>
-            <h2 class="nombre-empresa">Pasteleria Tentacion</h2>
-            <a href="index.html">Inicio</a>
-            <a href="login.html">Iniciar Sesión</a>
-            <a href="products.html">Nuestros Productos</a>
-        </nav> -->
+        <div class="titles">
+            <ul class="navbar__menu__list">
+                <li class="navbar__menu__list__item">
+                    <a class="navbar__menu__list__item__link" href="index.html">inicio</a>
+                </li>
+                <li class="navbar__menu__list__item">
+                    <a class="navbar__menu__list__item__link" href="address.html">Direccion</a>
+                </li>
+                <li class="navbar__menu__list__item">
+                    <a class="navbar__menu__list__item__link" href="products.html">
+                        Productos</a>
+                </li>
+
+            </ul>
+        </div>
     </header>
+    <main>
+        <h2>¡Descubre nuestros deliciosos pasteles!</h2>
+        <p>Bienvenido a nuestra tienda en línea, donde encontrarás una amplia variedad de pasteles exquisitos.</p>
+        <p>Explora nuestra selección y haz tu pedido hoy mismo.</p>
+    </main>
 </body>
 
 <!-- Contenido principal -->
-<main>
-    <h2>¡Descubre nuestros deliciosos pasteles!</h2>
-    <p>Bienvenido a nuestra tienda en línea, donde encontrarás una amplia variedad de pasteles exquisitos.</p>
-    <p>Explora nuestra selección y haz tu pedido hoy mismo.</p>
-</main>
 
 <!-- Pie de página -->
 <footer>
