--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="navbar__instagram">
                 <ul>
                     <a href="https://www.instagram.com/alann.jsn/" class="navbar__instagram">
-                        <img class="instagram" src="instagram.png" alt="logo instagram">
+                        <img class="instagram" src="instawhite1.png" alt="logo instagram">
                         <li class="navbar__menu__list__item"></li>
                     </a>
                 </ul>
